# libmop

./: CMakeLists.txt  LICENSE  README.md
cmake/: libmopConfig.cmake.in
src/benchmarks/bayesopt/: hp_opt.cpp  simple.cpp
src/benchmarks/libmop/: bench.cpp  testfunctions.hpp
src/libmop/: acqui.hpp  bayes_opt.hpp  init.hpp  kernel.hpp  limbo.hpp  mean.hpp  model.hpp  opt.hpp  stat.hpp  stop.hpp  tools.hpp
src/libmop/acqui/: ei.hpp  gp_ucb.hpp  ucb.hpp
src/libmop/bayes_opt/: bo_base.hpp  boptimizer.hpp
src/libmop/init/: grid_sampling.hpp  lhs.hpp  no_init.hpp  random_sampling.hpp  random_sampling_grid.hpp
src/libmop/kernel/: exp.hpp  kernel.hpp  matern_five_halves.hpp  matern_three_halves.hpp  squared_exp_ard.hpp
src/libmop/mean/: constant.hpp  data.hpp  function_ard.hpp  mean.hpp  null_function.hpp
src/libmop/model/: gp.hpp  multi_gp.hpp  sparsified_gp.hpp
src/libmop/opt/: adam.hpp  chained.hpp  cmaes.hpp  gradient_ascent.hpp  grid_search.hpp  nlopt_base.hpp  nlopt_grad.hpp  nlopt_no_grad.hpp  optimizer.hpp  parallel_repeater.hpp  random_point.hpp  rprop.hpp
src/libmop/serialize/: binary_archive.hpp  text_archive.hpp
src/libmop/stat/: aggregated_observations.hpp  best_aggregated_observations.hpp  best_observations.hpp  best_samples.hpp  console_summary.hpp  gp.hpp  gp_acquisitions.hpp  gp_kernel_hparams.hpp  gp_likelihood.hpp  gp_mean_hparams.hpp  gp_prediction_differences.hpp  observations.hpp  samples.hpp  stat_base.hpp
src/libmop/stop/: chain_criteria.hpp  max_iterations.hpp  max_predicted_value.hpp
src/libmop/tools/: macros.hpp  math.hpp  (+3 more)
(+22 files in other folders)
